Added about and services sections, also some fixes.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>FFE-BAU</title>
     <link rel="stylesheet" href="Resources/css/index.css">
 
+    <link rel="stylesheet" href=
+    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+    </link>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(function () {
@@ -22,26 +26,96 @@
     <main>
         <div class="hero-section">
             <div class="hero-section-title">
-                <h1>We Are Here</h1>
-                <h1>To Make Your</h1>
-                <h1>Dream Come True</h1>
+                <h1 style="color: rgb(5, 20, 68);">We Are Here</h1>
+                <h1 style="color: rgb(5, 20, 68);">To Make Your</h1>
+                <h1 style="color: #eab64f;"> Dream Come True</h1>
             </div>
+            <!-- <p class="hero-paragraph">Welcome to FFE BAU, where craftsmanship meets innovation. With our dedication to quality and decades of experience, 
+                we're committed to bringing your vision to life, one brick at a time.</p> -->
             <div class="hero-section-buttons">
-                <button class="service-button">
-                    <a class="service-button-text" href="#">All Services</a>
-                </button>
-                <button class="contact-button">
-                    <a class="contact-button-text" href="#">Contact Us</a>
-                </button>
+                <a class="service-button" href="#">All Services</a>
+                <a class="contact-button" href="#">Contact Us</a>
+                
+            </div>
+        </div>
+
+        <div class="about-section">
+            <div class="about-container">
+                <h1>About Us</h1>
+                <p class="about-text">
+                    Established in 2005, FFE-BAU has been at the forefront of the construction industry, specializing in both comprehensive turnkey projects and personalized 
+                    solutions for our clients. With a wealth of experience and a commitment to excellence, we pride ourselves on delivering top-tier construction services tailored to meet 
+                    the unique needs of each project
+                </p>
+                <p class="about-text">
+                    Furthermore, our commitment to sustainability and environmental responsibility sets us apart in the industry. We strive to incorporate eco-friendly practices and innovative 
+                    technologies into our construction processes, minimizing our ecological footprint while maximizing energy efficiency and long-term sustainability. At FFE BAU, we're not just 
+                    building structures; we're shaping a better, greener future for generations to come.
+                </p>
+                <div class="about-buttons">
+                    <a class="learn-button" href="#">Read More</a>
+                    <a class="contact-button" href="#">Contact Us</a>
+                </div>
             </div>
         </div>
 
         <div class="service-section">
+            <div class="service-container">
+                <h1>Our Services</h1>
+                    <div class="services">
+                        <div class="single-service">
+                             <i class="fa fa-home"></i>
+                             <h3>Turnkey Projects</h3>
+                             <hr class="h-line">
+                             <p>
+                                We offer turnkey projects in collaboration with our partners, so you do not have to worry or plan anything in advance.
+                             </p>
+                        </div>
+                        <div class="single-service">
+                            <i class="fa fa-home"></i>
+                            <h3>Turnkey Projects</h3>
+                            <hr class="h-line">
+                            <p>
+                               We offer turnkey projects in collaboration with our partners, so you do not have to worry or plan anything in advance.
+                            </p>
+                        </div>
+                        <div class="single-service">
+                            <i class="fa fa-home"></i>
+                            <h3>Turnkey Projects</h3>
+                            <hr class="h-line">
+                            <p>
+                               We offer turnkey projects in collaboration with our partners, so you do not have to worry or plan anything in advance.
+                            </p>
+                        </div>
+                        
+                        <div class="single-service">
+                            <i class="fa fa-home"></i>
+                            <h3>Turnkey Projects</h3>
+                            <hr class="h-line">
+                            <p>
+                               We offer turnkey projects in collaboration with our partners, so you do not have to worry or plan anything in advance.
+                            </p>
+                        </div>
 
-        </div>
+                        <div class="single-service">
+                            <i class="fa fa-home"></i>
+                            <h3>Turnkey Projects</h3>
+                            <hr class="h-line">
+                            <p>
+                               We offer turnkey projects in collaboration with our partners, so you do not have to worry or plan anything in advance.
+                            </p>
+                        </div>
 
-        <div class="about-section">
-
+                        <div class="single-service">
+                            <i class="fa fa-home"></i>
+                            <h3>Turnkey Projects</h3>
+                            <hr class="h-line">
+                            <p>
+                               We offer turnkey projects in collaboration with our partners, so you do not have to worry or plan anything in advance.
+                            </p>
+                        </div>
+                    </div>
+            </div>
         </div>
 
         <div class="number-section">
